# promptdex

./: .gitignore  README.md  pyproject.toml
promptdex/: __init__.py  database.py  main.py  models.py  schemas.py  seed_library.py
promptdex/static/: app.js  index.html  styles.css
tests/: test_api.py
